# chipbox

./: .gitignore  .travis.yml  Readme.md  build.gradle  circle.yml  core-android-module.gradle  core-kotlin-module.gradle  dagger.gradle  dependencies-testing.gradle  di.gradle  feature-module.gradle  gradle.properties  settings.gradle
.circleci/: config.yml
app/: build.gradle  chipbox.jks  proguard-rules.pro
app-remaster/: build.gradle
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/VGMPlay/: CMakeLists.txt  ChipMapper.c  ChipMapper.h  Stream.c  Stream.h  VGMFile.h  VGMPlay.c  VGMPlay.h  VGMPlay_AddFmts.c  VGMPlay_Intf.h  stdbool.h  vgm2pcm.c
app/src/main/cpp/VGMPlay/android/: Backend.cpp  PlayerNativeVgmKt.cpp  Scanner.cpp  net_sigmabeta_chipbox_backend_vgm_BackendImpl.h  net_sigmabeta_chipbox_backend_vgm_ScannerImpl.h  net_sigmabeta_chipbox_util_external_PlayerNativeVgmKt.h
app/src/main/cpp/VGMPlay/chips/: 2151intf.c  2151intf.h  2203intf.c  2203intf.h  2413intf.c  2413intf.h  2608intf.c  2608intf.h  2610intf.c  2610intf.h  2612intf.c  2612intf.h  262intf.c  262intf.h  3526intf.c  3526intf.h  3812intf.c  3812intf.h  8950intf.c  8950intf.h  Ootake_PSG.c  Ootake_PSG.h  adlibemu.h  adlibemu_opl2.c  adlibemu_opl2.h  adlibemu_opl3.c  adlibemu_opl3.h  ay8910.c  ay8910.h  ay8910_opl.c  ay_intf.c  ay_intf.h  c140.c  c140.h  c352.c  c352.h  c6280.c  c6280.h  c6280intf.c  c6280intf.h  (+101 more)
app/src/main/cpp/VGMPlay/chips/opl/: opl.c  opl.h
app/src/main/cpp/VGMPlay/zlib/: zconf.h  zlib.h
app/src/main/cpp/gme/: Ay_Apu.cpp  Ay_Cpu.cpp  Ay_Emu.cpp  CMakeLists.txt  Classic_Emu.cpp  Data_Reader.cpp  Data_Reader.h  Gb_Apu.cpp  Gbs_Emu.cpp  Hes_Apu.cpp  Hes_Cpu.cpp  Hes_Emu.cpp  Kss_Cpu.cpp  Kss_Emu.cpp  Multi_Buffer.cpp  Music_Emu.cpp  Nes_Apu.cpp  Nes_Cpu.cpp  Nes_Fme7_Apu.cpp  Nes_Fme7_Apu.h  Nsf_Emu.cpp  Nsfe_Emu.cpp  Sap_Apu.cpp  Sap_Cpu.cpp  Sap_Emu.cpp  Spc_Cpu.cpp  Spc_Cpu.h  Spc_Emu.cpp  Vgm_Emu.cpp  Vgm_Emu_Impl.cpp  blargg_source.h  gb_cpu_io.h  gme.cpp  hes_cpu_io.h  nes_cpu_io.h  sap_cpu_io.h
app/src/main/cpp/gme/android/: Backend.cpp  FileNativeKt.cpp  PlayerNativeKt.cpp  Scanner.cpp  net_sigmabeta_chipbox_backend_gme_BackendImpl.h  net_sigmabeta_chipbox_backend_gme_ScannerImpl.h  net_sigmabeta_chipbox_util_external_FileNativeKt.h  net_sigmabeta_chipbox_util_external_PlayerNativeKt.h
app/src/main/cpp/libsamplerate/: CMakeLists.txt
app/src/main/cpp/libsamplerate/src/: src_sinc.c
app/src/main/cpp/psf/: CMakeLists.txt  Misc.c  Misc.h  PsxBios.c  PsxBios.h  PsxCommon.h  PsxCounters.c  PsxCounters.h  PsxDma.c  PsxDma.h  PsxHLE.c  PsxHw.c  PsxHw.h  PsxInterpreter.c  PsxMem.c  PsxMem.h  R3000A.c  R3000A.h  Spu.c  Spu.h  driver.h  types.h
app/src/main/cpp/psf/android/: Backend.cpp  net_sigmabeta_chipbox_backend_psf_BackendImpl.h
app/src/main/cpp/psf/spu/: adsr.c  adsr.h  dma.c  dma.h  externals.h  gauss_i.h  registers.c  regs.h  reverb.c  spu.c  spu.h  stdafx.h
app/src/main/cpp/psflib/: .gitignore  CMakeLists.txt  Makefile  psflib.vcxproj  psflib.vcxproj.filters
app/src/main/cpp/usf/: CMakeLists.txt
app/src/main/cpp/usf/android/: Backend.cpp  net_sigmabeta_chipbox_backend_usf_BackendImpl.h
app/src/main/cpp/usf/api/: callbacks.c
app/src/main/cpp/usf/debugger/: dbg_decoder.c
app/src/main/cpp/usf/main/: rom.c  util.c
app/src/main/cpp/usf/pi/: pi_controller.c
app/src/main/cpp/usf/prj/msvc/: lazyusf2.vcxproj
app/src/main/cpp/usf/r4300/: cp0.c  exception.c  interupt.c  pure_interp.c  r4300.c  tlb.c
app/src/main/cpp/usf/rsp_hle/: hle.c
app/src/main/cpp/usf/si/: game_controller.c
app/src/main/cpp/usf/usf/: resampler.c  usf.c
core/activities/: build.gradle
core/colors/: build.gradle
core/components/: build.gradle
core/player/emulators/2sf/src/main/cpp/: 2sf.cpp  2sf.h  CMakeLists.txt  kotlin-jni.cpp
core/player/emulators/2sf/src/main/cpp/Core/vio2sf/: vio2sf.c  vio2sf.h
core/player/emulators/2sf/src/main/cpp/Core/vio2sf/desmume/: SPU.cpp  SPU.hpp  spu_exports.h  state.h
core/player/emulators/2sf/src/main/cpp/common/: common.cpp  common.h
core/player/emulators/gme/src/main/cpp/: CMakeLists.txt  Gme.cpp  Gme.h  kotlin-jni.cpp
core/player/emulators/gme/src/main/cpp/gme/: Ay_Apu.cpp  Ay_Cpu.cpp  Ay_Emu.cpp  Classic_Emu.cpp  Data_Reader.cpp  Gb_Apu.cpp  Gbs_Emu.cpp  Hes_Apu.cpp  Hes_Cpu.cpp  Hes_Emu.cpp  Kss_Cpu.cpp  Kss_Emu.cpp  Multi_Buffer.cpp  Music_Emu.cpp  Nes_Apu.cpp  Nes_Cpu.cpp  Nes_Fme7_Apu.cpp  Nes_Fme7_Apu.h  Nsf_Emu.cpp  Nsfe_Emu.cpp  Sap_Apu.cpp  Sap_Cpu.cpp  Sap_Emu.cpp  Spc_Cpu.cpp  Spc_Cpu.h  Spc_Emu.cpp  Vgm_Emu.cpp  Vgm_Emu_Impl.cpp  blargg_source.h  gb_cpu_io.h  gme.cpp  hes_cpu_io.h  nes_cpu_io.h  sap_cpu_io.h
core/player/emulators/psf/src/main/cpp/: CMakeLists.txt  Psf.cpp  Psf.h  kotlin-jni.cpp
core/player/emulators/psf/src/main/cpp/aopsf/: ao.h  eng_psf.c  osd_cpu.h  psx_internal.h  r3000dis.h
core/player/emulators/psf/src/main/cpp/aopsf/spu/: spu.h  spucore.c
core/player/emulators/psf/src/main/cpp/psflib/: psf2fs.h
core/player/emulators/ssf/src/main/cpp/: CMakeLists.txt  Ssf.cpp  Ssf.h  kotlin-jni.cpp
core/player/emulators/ssf/src/main/cpp/Core/: sega.c  yam.c
core/player/emulators/ssf/src/main/cpp/Core/c68k/: core.h
core/player/emulators/ssf/src/main/cpp/common/: common.h
core/player/emulators/ssf/src/main/cpp/psflib/: psf2fs.c
core/player/emulators/usf/src/main/cpp/: CMakeLists.txt  Usf.cpp  Usf.h  kotlin-jni.cpp
core/player/emulators/usf/src/main/cpp/common/: common.cpp  common.h
core/player/emulators/usf/src/main/cpp/lazyusf2/: Makefile
core/player/emulators/usf/src/main/cpp/lazyusf2/device/controllers/paks/: biopak.c
core/player/emulators/usf/src/main/cpp/lazyusf2/device/r4300/: mips_instructions.def
core/player/emulators/usf/src/main/cpp/lazyusf2/main/: main.c  rom.c  rom.h  savestates.c  screenshot.c
core/player/emulators/usf/src/main/cpp/lazyusf2/prj/msvc/: lazyusf2.vcxproj
core/player/emulators/usf/src/main/cpp/lazyusf2/rsp_hle/: plugin.c
core/player/emulators/usf/src/main/cpp/lazyusf2/usf/: usf.c  usf_internal.h
core/player/emulators/usf/src/main/cpp/psflib/: psflib.h
(+882 files in other folders)
